--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "version": "1.0.0",
   "peerDependencies": {
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
