--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "outDir": "dist",
         "rootDir": ".",
         "sourceMap": true,
-        "target": "ESNext",
+        "declaration": true,
+        "target": "ES2020",
         "module": "Node16",
         "strict": true,
         "strictNullChecks": true,
@@ -12,10 +13,8 @@
         "removeComments": false,
         "moduleResolution": "node16",
         "esModuleInterop": true,
-        "paths": {
-            "core": [
-                "packages/core/src"
-            ]
-        }
+        "lib": [
+            "ES2020"
+        ]
     }
 }
