--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "https://github.com/smilecc/node-redisson.git"
   },
+  "homepage": "https://smilecc.github.io/node-redisson/",
   "keywords": [
     "nodejs",
     "redlock",
