--- a/packages/nestjs/package.json
+++ b/packages/nestjs/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@node-redisson/nestjs",
-  "version": "1.0.3-rc1",
+  "version": "1.0.3-rc2",
   "description": "NodeRedisson for NestJS",
-  "type": "module",
+  "type": "commonjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
